--- a/orders/templates/orders/order_complete.html
+++ b/orders/templates/orders/order_complete.html
@@ -54,7 +54,29 @@
             font-size: 1.2rem;
             color: #343a40;
         }
+
+        .timer {
+            font-size: 2rem;
+            margin-top: 1rem;
+            color: #FFD700;
+        }
     </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            var countdown = 5;
+            var timerElement = document.getElementById("timer");
+
+            var interval = setInterval(function() {
+                if (countdown <= 0) {
+                    clearInterval(interval);
+                    window.location.href = "{% url 'orders:menu' %}";
+                } else {
+                    timerElement.textContent = countdown;
+                    countdown--;
+                }
+            }, 1000); // 1000 밀리초 = 1초
+        });
+    </script>
 </head>
 <body>
     <div class="order-confirmation">
@@ -64,6 +86,9 @@
             <div class="order-number">{{ order_number }}</div>
         </div>
         <p class="thank-you">이용해 주셔서 감사합니다.</p>
+        <div class="timer">
+            <span id="timer">5</span>초 후에 메뉴로 이동합니다.
+        </div>
     </div>
 </body>
 </html>
